# simmulated_annealing

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  customer.cpp  customer.hpp  main.cpp  old_version  route.cpp  route.hpp  wynik.txt
.github/workflow/: superlinter.yml
.github/workflows/: c-cpp.yml  test.yml
exceptions/: cannotInsertClientException.h
src/: CMakeLists.txt  constants.hpp  customer.hpp  main.cpp  route.cpp  route.hpp  simmulated_annealing.cpp  simmulated_annealing.hpp  solution.cpp  solution.hpp  tabuList.cpp  tabuList.hpp
src/SFMLInterface/: graph.cpp  graph.hpp  liveAnnealingInfo.hpp  mainInterface.cpp
src/exceptions/: cannotInsertClientException.hpp  capacityException.hpp  routeException.hpp  windowConstraintException.hpp
src/main/: Exceptions.hpp  constants.hpp  customer.cpp  customer.hpp  main.cpp  route.cpp  route.hpp  simmulated_annealing.cpp  simmulated_annealing.hpp  solution.cpp  solution.hpp  tabuList.cpp  tabuList.hpp
src/main/exceptions/: capacityException.hpp  windowConstraintException.hpp
tests/: CMakeLists.txt  crptw_solutionFixture.cpp  main.cpp  routeTestFixture.cpp  simmulatedAnnealingFixture.cpp  simpleTest.cpp  validSolutionTest.cpp
tests/solomonInstances/solomon_50/: C101.txt
tests/testDataFiles/: cvrptw4.txt  m2kvrptw-0.txt
